--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,7 +7,12 @@
     margin: 0;
     padding: 0;
 }
-
+.mundo-invertido{
+    color: blue;
+}
+.mundo-invertido a{
+    color: blue;
+}
 html, body {
     height: 100%;
     width: 100%;
